<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#42A5F5"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#EAE7F1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo" />

        <TextView
            android:textColor="#EC0327"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:paddingLeft="25dp"/>
        <TextView
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="#EC4785"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:textColor="#1521F5"
            android:textSize="30sp"/>
        <TextView
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:fontFamily="serif"
            android:textColor="#1A237E"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="20dp"
                android:src="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:textColor="#1A237E"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/address"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="20dp"
                android:src="@drawable/ic_phone_black_24dp" />

            <TextView
                android:fontFamily="sans-serif"
                android:textColor="#1A237E"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/phone"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="20dp"
                android:src="@drawable/ic_email_black_24dp" />

            <TextView
                android:textColor="#1A237E"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textSize="18sp"
                android:fontFamily="sans-serif"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>